@@ -11,14 +11,6 @@
 
     <artifactId>lkre-model</artifactId>
 
-<configuration>
-    <fork>true</fork>
-    <compilerArgs>
-      <arg>--add-opens</arg>
-      <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-    </compilerArgs>
-  </configuration>
-
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
